Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.0 FF, 6.2.0 Alpha, 6.2.0 Beta1, 6.2.0 Beta2
-
Fix Version/s: 6.2.0 Beta4, 6.3.0 Alpha
-
Component/s: Core: Object Model
-
Labels:None
-
Platform/s:
-
Commits:e4d62651c278c468f71ce097979bc1183ffd0713 (qt/qtbase/dev) 7f97d21105f0164c1d3d623d66af56b9f52ae19b (qt/qtbase/6.2)
Description
Since 6.2, QPropertyAlias can no longer be instantiated without leading to immediate crash.
The crash is cased by QPropertyObserver::aliasedProperty() returning nullptr. nullptr is not allowed for setting observer (QBindableInterface::SetObserver).
QPropertyAlias uses QPropertyObserver::aliasedProperty() in all its functions to retrieve the aliased property and strictly requires a pointer to an existing property.
Code example:
QProperty<int> property; QPropertyAlias<int> alias(&property); // crash